force-app/main/default/objects/Opportunity/fields/ABP_Amount_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>ABP_Amount_per_Unit__c</fullName>
    <formula>Amount / ABP_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Amount per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>