force-app/main/default/objects/Opportunity/fields/ABP_Cost__c.field-meta.xml
<CustomField>
    <fullName>ABP_Cost__c</fullName>
    <formula>Amount-4000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>