force-app/main/default/objects/Opportunity/fields/ABP_Cost_per_Unit_2__c.field-meta.xml
<CustomField>
    <fullName>ABP_Cost_per_Unit_2__c</fullName>
    <formula>Amount /  ABP_Unit_Invested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Cost per Unit 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>