force-app/main/default/objects/Opportunity/fields/ABP_Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>ABP_Cost_per_Unit__c</fullName>
    <formula>ABP_Cost__c / ABP_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>