force-app/main/default/objects/Opportunity/fields/ABP_Margin__c.field-meta.xml
<CustomField>
    <fullName>ABP_Margin__c</fullName>
    <formula>Amount -  ABP_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>