force-app/main/default/objects/Opportunity/fields/ABP_Product_Margin__c.field-meta.xml
<CustomField>
    <fullName>ABP_Product_Margin__c</fullName>
    <formula>ABP_Sales_Per_Unit__c - ABP_Cost_per_Unit_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Product Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>