force-app/main/default/objects/Opportunity/fields/ABP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ABP_Quantity__c</fullName>
    <formula>123</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>