force-app/main/default/objects/Opportunity/fields/ABP_Sales_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>ABP_Sales_Per_Unit__c</fullName>
    <formula>Amount /  ABP_Unit_Invested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Sales Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>