force-app/main/default/objects/Opportunity/fields/ABP_Unit_Invested__c.field-meta.xml
<CustomField>
    <fullName>ABP_Unit_Invested__c</fullName>
    <formula>789</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Unit Invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>