force-app/main/default/objects/Opportunity/fields/ABP_Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>ABP_Unit_Margin__c</fullName>
    <formula>ABP_Amount_per_Unit__c - ABP_Cost_per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Unit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>