force-app/main/default/objects/Opportunity/fields/ABP_Unit_Reference__c.field-meta.xml
<CustomField>
    <fullName>ABP_Unit_Reference__c</fullName>
    <formula>ABP_Unit_Invested__c / ABP_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Unit Reference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>