force-app/main/default/objects/Opportunity/fields/ABP_Variance__c.field-meta.xml
<CustomField>
    <fullName>ABP_Variance__c</fullName>
    <formula>(Amount- ABP_Cost__c )/Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Variance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>