force-app/main/default/objects/Opportunity/fields/Account_Changed__c.field-meta.xml
<CustomField>
    <fullName>Account_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Changed</label>
    <type>Checkbox</type>
</CustomField>