force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <summarizedField>OpportunityLineItem.Discount</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>