force-app/main/default/objects/Opportunity/fields/Quote_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Discount__c</fullName>
    <formula>SyncedQuote.Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>